Fixed program cards spacing and sizing issue on mobile and pc

--- a/scss/components/_programcard.scss
+++ b/scss/components/_programcard.scss
@@ -8,14 +8,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 clamp(2rem, 3vw, 3rem);
+    padding: 1.875rem clamp(2rem, 1.2vw, 2.5rem);
+    max-width: 330px;
     cursor: pointer;
 
     .card__status {
         font-size: 0.875rem;
         font-family: base.$poppinsSemiBold;
         letter-spacing: .1em;
-        margin: 1.875rem 0 1.25rem 0;
+        margin-bottom:1.25rem;
     }
 
     .card__status.upcoming {
@@ -39,19 +40,21 @@
         font-size: 1.25rem;
         font-family: base.$poppinsBold;
         margin-bottom: 0.625rem;
+        text-align: center;
+        height: 48px;
     }
 
     .card__organizer {
         font-size: 1rem;
         font-family: base.$poppinsRegular;
-        margin-bottom: 0.3125rem;;
+        margin-bottom: 0.5rem;;
     }
 
     .card__meta {
         display: flex;
         gap: 1.25rem;
         align-items: center;
-        margin-bottom: 1.6875rem;
+        margin-bottom: 1rem;
         
         p {
             font-size: 1rem;
@@ -72,7 +75,7 @@
     .card__time {
         font-size: 16px;
         font-family: PoppinsRegular;
-        margin-bottom: 33px
+        // margin-bottom: 33px
     }
 
     .card__description {
